--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -35,7 +35,7 @@ hr {
 }
 
 nav box-icon {
-  @apply w-auto px-8 hover:bg-sky-800;
+  @apply w-auto p-4 hover:bg-sky-800;
 }
 
 .field {
@@ -43,5 +43,5 @@ nav box-icon {
 }
 
 td {
-  @apply border border-slate-700 dark:border-slate-600 p-3;
+  @apply border border-slate-400 dark:border-slate-600 p-3;
 }
