--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,11 +1,15 @@
-{% extends 'core/base.html' %}
-{% load static %}
-{% block content %}
-<main class="w-full h-[90%] bg-gradient-to-br from-cyan-600 to-indigo-500 p-9">
+{% extends 'core/base.html' %} {% load static %} {% block content %}
+<main
+  class="w-full h-full bg-gradient-to-br from-cyan-500 to-sky-600 p-5 md:p-9"
+>
   <section
-    class="w-full h-full bg-cyan-50 dark:bg-slate-800 rounded-2xl shadow-sm shadow-slate-800 flex justify-around"
+    class="w-full h-full bg-slate-100 dark:bg-slate-800 rounded-3xl shadow-sm shadow-slate-800 sm:flex justify-between relative"
   >
-    <form action="{% url 'login' %}" method="POST" class="p-8 px-14 flex flex-col items-center">
+    <form
+      action="{% url 'login' %}"
+      method="POST"
+      class="py-14 px-8 sm:p-14 flex flex-col items-center"
+    >
       {% csrf_token %}
       <header class="flex gap-4 items-center mb-6">
         <img
@@ -15,10 +19,13 @@
         />
         <div>
           <h1 class="text-3xl font-sans font-bold">Login</h1>
-          <h2 class="text-lg font-sans">Entre com seu ID e senha</h2>
+          <h2 class="text-lg font-sans">
+            Entre com seu <br class="hide sm:block md:hidden" />
+            ID e senha
+          </h2>
         </div>
       </header>
-      <div>
+      <div class="flex flex-col justify-center sm:block">
         <div class="flex flex-col gap-1 mb-3">
           <label for="school-code">Código da escola:</label>
           <!-- TODO: Add a pop-up that helps find their school -->
@@ -33,22 +40,27 @@
           <input type="password" name="password" id="password" />
         </div>
 
-        <a href="new_password" class="text-sky-700 dark:text-sky-500">Enqueci a senha</a>
-        <br />
-        <input
-          type="submit"
-          value="Entrar"
-          class="bg-sky-700 dark:bg-sky-600 py-2 px-5 mt-2 rounded hover:shadow cursor-pointer"
-        />
+        <div class="flex flex-col md:block">
+          <a href="new_password" class="text-sky-700 dark:text-sky-500"
+            >Enqueci a senha</a
+          >
+          <br />
+          <input
+            type="submit"
+            value="Entrar"
+            class="bg-amber-400 dark:bg-amber-500 dark:text-black py-2 px-5 mt-4 rounded-2xl md:rounded-md hover:shadow-md cursor-pointer sm:rounded-3xl sm:"
+          />
+        </div>
       </div>
     </form>
-    <aside>
-      <img
-        src="{% static 'core/images/desenho.png' %}"
-        alt="lineart de alunos em sala de aula"
-        class="bg-gray-200 w-full h-full object-cover object-top rounded-r-2xl"
-      />
-    </aside>
+    <aside
+      class="bg-gray-200 dark:bg-slate-700 rounded-3xl w-1/2 hidden sm:block"
+    ></aside>
+    <img
+      src="{% static 'core/images/desenho.png' %}"
+      alt="lineart de alunos em sala de aula"
+      class="w-4/6 sm:w-1/2 absolute bottom-0 right-10"
+    />
   </section>
 </main>
 {% endblock %}
