--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -34,8 +34,8 @@ hr {
   @apply my-3 dark:border-slate-500;
 }
 
-nav box-icon {
-  @apply w-auto p-4 hover:bg-sky-800;
+nav svg {
+  @apply w-6 h-6;
 }
 
 .field {
