--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block content %}
 <main
-  class="w-full h-full bg-gradient-to-br from-cyan-500 to-sky-600 p-5 md:p-9"
+  class="w-full h-full bg-gradient-to-br from-cyan-500 to-sky-600 p-5 sm:p-9"
 >
   <section
     class="w-full h-full bg-slate-100 dark:bg-slate-800 rounded-3xl shadow-sm shadow-slate-800 sm:flex justify-between relative"
@@ -59,7 +59,7 @@
     <img
       src="{% static 'core/images/desenho.png' %}"
       alt="lineart de alunos em sala de aula"
-      class="w-4/6 sm:w-1/2 absolute bottom-0 right-10"
+      class="w-4/6 sm:w-1/2 absolute bottom-0 right-10 hidden sm:block"
     />
   </section>
 </main>
