--- a/core/templates/core/messages.html
+++ b/core/templates/core/messages.html
@@ -6,7 +6,7 @@
         colors: {
           success: 'lime',
           info: 'amber',
-          warning: 'orange',
+          warning: 'yellow',
           error: 'red',
           debud: 'indigo'
         },
