--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -20,8 +20,8 @@
   [multiple],
   textarea,
   select {
-    @apply shadow-sm rounded-md transition-all border
-    focus-visible:outline-none focus:border-sky-500 hover:border-sky-500
+    @apply shadow-sm rounded-xl transition-all border
+    focus-visible:outline-none focus:border-sky-600 hover:border-sky-600
     dark:bg-slate-700;
   }
 
