--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -28,6 +28,10 @@
   [type='radio'] {
     @apply ml-2 mr-1;
   }
+
+  [type='submit'] {
+    @apply bg-amber-400 dark:bg-amber-500 dark:text-black;
+  }
 }
 
 hr {
