--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -20,9 +20,9 @@
   [multiple],
   textarea,
   select {
-    @apply shadow-sm rounded-xl transition-all border
-    focus-visible:outline-none focus:border-sky-600 hover:border-sky-600
-    dark:bg-slate-700;
+    @apply shadow-sm rounded-xl transition-all border border-gray-400
+    dark:border-gray-500 focus-visible:outline-none focus:border-sky-600
+    hover:border-sky-600 dark:bg-slate-700;
   }
 
   [type='radio'] {
@@ -43,9 +43,13 @@ nav svg {
 }
 
 .field {
-  @apply flex items-center gap-2;
+  @apply flex flex-col items-start gap-1;
 }
 
 td {
   @apply border border-slate-400 dark:border-slate-600 p-3;
+}
+
+main.framed {
+  @apply py-9 px-6 border border-slate-400 dark:border-slate-600 shadow-md dark:shadow-gray-500;
 }
